# compconf

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.sh  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
compconf/: __init__.py  __main__.py
test/: client.py  compile.sh  execute.sh  kernel.csl  layout.csl  test.sh
