[project]
authors = [
  {name = "Matthew Andres Moreno", email="m.more500@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
# end-user requirements
dependencies = [
  "jq",
]
description = "conftime enables flexible, type-rich comptime configuration of Cerebras Software Language (CSL) projects"
license = {text = "MIT license"}
name  =  "conftime"
keywords = [
  "conftime",
]
requires-python = ">=3.10"
version = "0.1.2"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/conftime"
# documentation = "https://conftime.readthedocs.io"
repository = "https://github.com/mmore500/conftime.git"

# adapted from https://tox.wiki/en/latest/example/package.html
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=0.29",
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.black]
line_length = 80

[tool.isort]
force_sort_within_sections = true
line_length = 80
profile = "black"
skip_gitignore = true
